--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -1,9 +1,9 @@
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 a {
@@ -14,8 +14,8 @@ a {
 
 /* NAVBAR */
 
-.navbar{
-    background-color: #C083B9;
+.navbar {
+    background-color: #3c0d4e;
     width: 100%;
     height: 85px;
 }
@@ -27,35 +27,67 @@ a {
 
 /* -------------------------------------------------------------------------------- */
 
-
 /* HEADER */
 
+header {
+    background: url(./img/backgroud_header_01.jpg);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
+.container_header {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
 
+h1 {
+    color: white;
+    font-size: 1.2rem;
+    flex-wrap: wrap;
+    margin: 2rem 1.5rem 0.5rem 1rem;
+    text-align: center;
+}
 
+.header-photo {
+    width: 80%;
+    margin: 2rem;
+}
 /* --- BOTAO --- */
-  
 
+.header_button {
+    background-color: rgba(0, 0, 0, 0.38);
+    border-radius: .2rem;
+    color: white;
+    padding: 0.4rem 0.6rem;
+    font-size: 0.7rem;
+    cursor: pointer;
+    transition: .3s ease all;
+
+}
+
+.header_button:hover{
+    background-color:#3c0d4e;
+    transition: all .5s;
+}
 
 /*********** HEADER   *********/
 
-
-
 /* SECAO Maravilhosa */
 
-
-
+.container_maravilhosa{
+    background-color: teal;
+}
+.person{
+    margin-top: 0;
+}
 /* AUTORA */
-
-
 
 /* SECAO Recado */
 
-
-
 /* FOOTER */
 
-
 /* MEDIA QUERY */
-
-
