--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 16px;
 }
 
 a {
@@ -15,7 +14,7 @@ a {
 /* NAVBAR */
 
 .navbar {
-    background-color: #3c0d4e;
+    background-color: black;
     width: 100%;
     height: 85px;
 }
@@ -29,65 +28,262 @@ a {
 
 /* HEADER */
 
-header {
-    background: url(./img/backgroud_header_01.jpg);
-    width: 100%;
+.header {
+    background-image: url(./img/backgroud_header_01.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 80vh;
+    width: 100%;
+    height: 500px;
+    color: #ffffff;
 }
 
 .container_header {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
     width: 100%;
     height: 100%;
+    display: flex;
+    padding: 30px;
+    flex-direction: column;
 }
 
-h1 {
-    color: white;
-    font-size: 1.2rem;
-    flex-wrap: wrap;
-    margin: 2rem 1.5rem 0.5rem 1rem;
+.header_maravilhosa_img {
+    width: 90%;
+    height: 220px;
+    margin-left: 20px;
+    margin-top: 50px;
+}
+
+.header_titulo {
+    width: 90%;
+    margin: 5px 10px 5px 10px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.header-photo {
-    width: 80%;
-    margin: 2rem;
-}
 /* --- BOTAO --- */
 
 .header_button {
-    background-color: rgba(0, 0, 0, 0.38);
-    border-radius: .2rem;
-    color: white;
-    padding: 0.4rem 0.6rem;
-    font-size: 0.7rem;
-    cursor: pointer;
-    transition: .3s ease all;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 40px;
+    background: black;
+    border-radius: 5px;
+    color: whitesmoke;
+    text-decoration: none;
+    list-style: none;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    margin-top: 40px;
 }
 
-.header_button:hover{
-    background-color:#3c0d4e;
-    transition: all .5s;
+.header_button:hover {
+    background-color: #811539;
+    color: #ffffff;
+    transition: background-color .5s;
 }
-
-/*********** HEADER   *********/
 
 /* SECAO Maravilhosa */
 
-.container_maravilhosa{
-    background-color: teal;
+.maravilhosa {
+    background-color: #ffff42;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 25px;
 }
-.person{
-    margin-top: 0;
+
+.container_maravilhosa {
+    text-align: center;
+    padding: 0 5%;
 }
+
+.maravilhosa_titulo {
+    color: black;
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 40px;
+}
+
+.maravilhosa_boxBorder {
+    border: 1px solid #811539;
+    margin: 42px;
+}
+
+.boxBorder_texto {
+    margin: 30px;
+    color: black;
+    text-align: center;
+}
+
+.container_suaHistoria {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+}
+
+.suaHistoria_imagem {
+    width: 50vh;
+    height: 50vh;
+    margin-bottom: 30px;
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+}
+
+.suaHistoria_texto {
+    width: 100%;
+    line-height: 1.5rem;
+}
+
+.suaHistoria_titulo {
+    color: #811539;
+    padding: 20px;
+}
+
+.suaHistoria_paragrafo {
+    padding-bottom: 10px;
+    line-height: 1.5rem;
+}
+
 /* AUTORA */
 
-/* SECAO Recado */
+.autora {
+    background-color: #7aeee0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    line-height: 1.5rem;
+    padding-bottom: 2rem;
+}
+
+.autora h2 {
+    padding-top: 2rem;
+    text-align: center;
+}
+
+.autora_title {
+    text-align: center;
+    color: #811539;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 30px;
+    line-height: 1.5rem;
+}
+
+.autora_sobre {
+    text-align: center;
+    margin: 30px;
+}
+
+.autora__photo {
+    width: 50vh;
+    height: 50vh;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+}
 
 /* FOOTER */
 
-/* MEDIA QUERY */
+.footer {
+    background: #ea4c89;
+    color: #f3f3f3;
+}
+
+.social {
+    background-color: black;
+    height: 35vh;
+    color: whitesmoke;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+li {
+    text-align: center;
+    list-style-type: none;
+    margin: 0.8rem;
+}
+
+.social_media img {
+    width: 35%;
+}
+
+.footer_cc {
+    background: white;
+    width: 100%;
+    padding: 20px;
+    color: black;
+    text-align: center;
+}
+
+/* Responsividade */
+
+@media (min-width:768px) {
+    .container_header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .header_maravilhosa_img {
+        width: 100%;
+        height: 350px;
+        margin-bottom: 180px;
+        margin-left: 8px;
+    }
+    .header_titulo h1 {
+        font-size: 4rem;
+    }
+    .container_suaHistoria p, .autora_sobre p {
+        text-align: justify;
+    }
+    
+   .suaHistoria_titulo{
+       font-size: 3rem;
+       padding-bottom: 8rem;
+   }
+
+   .suaHistoria_paragrafo{
+       font-size: 1.3rem;
+   }
+    .autora {
+        display: flex;
+        flex-direction: row;
+        padding: 3rem;
+    }
+    .autora__photo {
+        clip-path: none;
+        border-radius: 20rem;
+        width: 40vh;
+        height: 40vh;
+    }
+}
+
+@media (min-width:1200px) {
+    .container_suaHistoria {
+        display: flex;
+        flex-direction: row;
+    }
+    .suaHistoria_imagem {
+        clip-path: none;
+        margin: 2rem;
+        border-radius: 0.5rem;
+        height: 70vh;
+        width: 40%;
+
+    }
+    .boxBorder_texto{
+        font-size: 1.4rem;
+    }
+}
